@@ -621,7 +621,9 @@ void TouchBonus(int A, int B)
             {
                 for(const auto& star : Star)
                 {
-                    if(star.level == FileNameFull && (star.Section == NPC[B].Section || star.Section == -1))
+                    bool bySection = int(NPC[B].Special) <= 0 && (star.Section == NPC[B].Section || star.Section == -1);
+                    bool byId = int(NPC[B].Special) > 0 && -star.Section == int(NPC[B].Special);
+                    if(star.level == FileNameFull && (bySection || byId))
                         tempBool = true;
                 }
 
@@ -629,7 +631,8 @@ void TouchBonus(int A, int B)
                 {
                     Star_t star;
                     star.level = FileNameFull;
-                    star.Section = NPC[B].Section;
+                    // Positive - section number, Negative - UID of each star per level
+                    star.Section = int(NPC[B].Special) <= 0 ? NPC[B].Section : -int(NPC[B].Special);
                     Star.push_back(std::move(star));
                     numStars = (int)Star.size();
 #ifdef THEXTECH_INTERPROC_SUPPORTED
